--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,18 @@
 body{
 background-color: black;
 color: white;
+display: flex;
+justify-content: center;
+align-items: center;
 }
-.img01{
-    width: 100%;
+main{
+text-align: center;
+max-width: 90%;
 
 }
+
+.img01{
+
+    width: 90%;
+}
+
