--- a/estilo.css
+++ b/estilo.css
@@ -8,9 +8,12 @@ align-items: center;
 main{
 text-align: center;
 max-width: 90%;
-
 }
-
+button{
+    background-color: aqua;
+color: black;
+padding: 20px;
+}
 .img01{
 
     width: 80%;
